[project]
name = "reranker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "bm25s>=0.2.14",
    "datasets>=4.5.0",
    "ir-datasets>=0.5.11",
    "peft>=0.18.1",
    "pillow>=12.1.0",
    "pystemmer>=3.0.0",
    "python-dotenv>=1.2.1",
    "torch>=2.10.0",
    "transformers>=4.57.6",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # PEP8 style issues (e.g., whitespace, line length)
    "F",   # Pyflakes: undefined variables, imports, etc.
    "B",   # flake8-bugbear: common bugs and code smells
    "UP",  # pyupgrade: modernize Python syntax
    "D",   # pydocstyle: docstring conventions
    "I",   # isort: import sorting
    "N"    # pep8-naming: naming conventions
]
ignore = ["D107"]

[tool.ruff.pydocstyle]
convention = "google"
